modified:   .gitignore 	modified:   B30CAA.txt 	modified:   CATIA_V5_SimpleMacroMenu.catvba 	modified:   ENV/B30CAA.txt 	modified:   ENV/CAA/B30/settings/Licensing.CATSettings 	modified:   ENV/CAA/B30/settings/SettingsDialog.CATSettings 	modified:   ENV/Ref_settings/FrameGeneral.CATSettings

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,8 @@ install
 catia test
 ENV\catia standard parts
 desktop.ini
-ENV\R30-CAA-log.txt
 test\
+R30-CAA-log.txt
+\ENV\R30-CAA-log.txt
+*log.txt
+ENV\R30-CAA-log.txt
